2009-07-27  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/dialog_image_progress.cc: on_stream_read(): Add casts 
	to avoid compiler warnings, to fix distcheck.

2009-07-27  Murray Cumming  <murrayc@murrayc.com>

	Add more delay so that self-hosting does not fail sometimes.
	
	* glom/libglom/spawn_with_feedback.cc: 
	execute_command_line_and_wait_until_second_command_returns_success(): Wait 
	for extra 8 seconds instead of 3, so that postgresql startup has really 
	finished. The delay was not enough since I removed the debug output, which 
	was probably providing extra delay.
	This is unpleasant. 

2009-07-25  Daniel Elstner  <danielk@openismus.com>

	List auto-generated files in MAINTAINERCLEANFILES

	* Makefile.am (MAINTAINERCLEANFILES): Clean up the macros/*.m4 files
	installed by autogen.sh, as well as the eggmarshalers.[ch] files.

2009-07-25  Daniel Elstner  <danielk@openismus.com>

	Pass --automake option to gnome-doc-prepare

	* autogen.sh: Invoke gnome-doc-prepare with the --automake option to
	tell it that Automake will take care of installing its macro files.

2009-07-25  Murray Cumming  <murrayc@murrayc.com>

	* glom/base_db.cc: get_fields_for_table_from_database(): 
	Use gda_meta_store_sql_identifier_quote() as mentioned in bug #589607
	to maybe make this work with uppercase in the table name.

2009-07-24  Daniel Elstner  <danielk@openismus.com>

	Assign copyright of my work to Openismus GmbH

	* configure.ac: Reassign the copyright which I had assigned to myself
	temporarily to Openismus GmbH instead, as I did the work in my position
	as an employee.
	* *.am: ditto,
	* macros/mm-python.m4: ditto.

2009-07-24  Daniel Elstner  <danielk@openismus.com>

	Split Makefile.am into logically separate parts

	* glom.am: New file for building the glom binary itself.
	* libglom.am: New file for building the libglom library.
	* libegg.am: New file for building the libegg static library.
	* tests.am: New file for building the test programs.